changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Add min/max monster level information to maps.
 utils/mapper.c
 utils/templates/map_monster_before.template: added the fields to the default template.
Nicolas Weeger 2008-05-07

Remove unused #ifdef and useless LOG.
 common/map.c
Nicolas Weeger 2008-05-06

Provide a more explicit message when attempting to write down a spell with
no marked scroll, as per bug #1910805.
 server/skills.c
Yann Chachkoff 2008-04-20

New plugin: random house generator. Check cfrhg.c for details.
Still basic, but should be a good start.
 configure.ac
 plugins/Makefile.am
Added:
 cfrhg/include/cfrhg.h
 cfrhg/cfrhg.c Makefile.am
Nicolas Weeger 2008-04-12

Extract duplicator handling to its own type file.
 common/button.c
 include/sproto.h typesproto.h
 random_maps/standalone.c
 server/ob_types.c time.c
 test/unit/common/stubs_common.c
 test/unit/random_maps/stubs_random.c
 test/unit/socket/stubs_socket.c
 utils/bwp.c mapper.c
 types/Makefile.am
New file:
 types/duplicator/duplicator.c
Nicolas Weeger 2008-04-11

Extract detector handling to its own type file.
 include/sproto.h typesproto.h
 server/ob_types.c time.c
 types/Makefile.am
 types/legacy/process.c
New file:
 types/detector/detector.c
Nicolas Weeger 2008-04-11

Extract mood floor handling to its own type file.
 common/button.c
 include/sproto.h typesproto.h
 server/ob_types.c
 types/Makefile.am
 types/legacy/process.c
New file:
 types/mood_floor/mood_floor.c
Nicolas Weeger 2008-04-09

Extract marker handling to its own type file.
 common/button.c
 include/sproto.h typesproto.h
 random_maps/standalone.c
 server/ob_types.c time.c