@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+common/loader.l: remove obsolete code.
+Nicolas Weeger 2008-05-07
+
 Add min/max monster level information to maps.
  utils/mapper.c
  utils/templates/map_monster_before.template: added the fields to the default template.
